--- a/my-mental-hub/package.json
+++ b/my-mental-hub/package.json
@@ -14,6 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "datatables": "^1.10.18",
+    "datatables.net": "^2.3.3",
+    "datatables.net-bs5": "^2.3.3",
+    "primevue": "^4.3.7",
     "vue": "^3.5.18"
   },
   "devDependencies": {
