--- a/my-mental-hub/package.json
+++ b/my-mental-hub/package.json
@@ -19,7 +19,8 @@
     "datatables.net": "^2.3.3",
     "datatables.net-bs5": "^2.3.3",
     "primevue": "^4.3.7",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
