--- a/my-mental-hub/package.json
+++ b/my-mental-hub/package.json
@@ -14,11 +14,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
+    "cors": "^2.8.5",
     "datatables": "^1.10.18",
     "datatables.net": "^2.3.3",
     "datatables.net-bs5": "^2.3.3",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "mapbox-gl": "^3.15.0",
     "primevue": "^4.3.7",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
