--- a/my-mental-hub/package.json
+++ b/my-mental-hub/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
+    "@primevue/themes": "^4.4.1",
     "@sendgrid/mail": "^8.1.6",
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
@@ -25,7 +27,7 @@
     "express": "^5.1.0",
     "firebase": "^12.2.1",
     "mapbox-gl": "^3.15.0",
-    "primevue": "^4.3.7",
+    "primevue": "^4.4.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
