--- a/my-mental-hub/package.json
+++ b/my-mental-hub/package.json
@@ -11,7 +11,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "start":"node server.js"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
@@ -26,7 +27,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.5.0",
     "mapbox-gl": "^3.15.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
