--- a/my-mental-hub/.env.example
+++ b/my-mental-hub/.env.example
@@ -1,2 +1,4 @@
 SENDGRID_API_KEY=YOUR_SENDGRID_API_KEY_HERE
-PORT=3000
+DATABASE_URL=YOUR_DATABASE_URL_HERE
+SECRET_KEY=YOUR_SECRET_KEY_HERE
+PORT=0000
